--- a/env/.prod.env
+++ b/env/.prod.env
@@ -1,5 +1,5 @@
 PROJECT_NAME=bar-prod
 
-KAFKA_ADVERTISED_HOST_NAME: kafka
-KAFKA_CREATE_TOPICS: sales-topic:1:1
-KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+KAFKA_ADVERTISED_HOST_NAME=kafka
+KAFKA_CREATE_TOPICS=sales-topic:1:1
+KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
